--- a/beamercolorthemerli.sty
+++ b/beamercolorthemerli.sty
@@ -4,6 +4,7 @@
 \definecolor{rliblue}{HTML}{002E4F}
 \definecolor{rligray}{HTML}{A5A6A6}
 \definecolor{rligraylight}{HTML}{ECECEC}
+\definecolor{linkcolor}{HTML}{0066b0}
 
 % Set colors
 \setbeamercolor{title}{fg=rliblue}
@@ -20,13 +21,10 @@
 \setbeamercolor*{date}{fg=rliblue}
 \setbeamercolor{enumerate item}{fg=rliblue}
 \setbeamercolor{enumerate subitem}{fg=rliblue}
-
-% Fonts
-% \setbeamerfont{author}{size={\fontsize{10}{10}}}
-\usefonttheme{professionalfonts} % using non standard fonts for beamer
-% \usefonttheme{structurebold} % using non standard fonts for beamer
-% \usefonttheme{sanserif} % default family is serif
-% \setmainfont{Liberation Serif}
+\setbeamercolor{description body}{fg=rliblue}
+\setbeamercolor{itemize body}{fg=rliblue}
+\setbeamercolor{enumerate body}{fg=rliblue}
+\setbeamercolor{structure}{fg=rliblue}
 
 \mode
 <all>
